fix: header no longer overflows on elements
fixed name size on smaller viewports to scale with width so it no longer breaks at smaller views
added padding right of the h1 title so it never overlaps with hamburger menu, since menu is fixed
Dynamically sized logo with viewport width at smaller screen sizes

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -30,7 +30,7 @@ header{
   justify-content: flex-start;
   h1{
     font-family: 'Courgette', cursive;
-    padding: .5rem 0 0 0;
+    padding: .5rem 2.5rem 0 0;
     text-shadow: 0 0 .05em $ich-color;
   }
 }
@@ -42,4 +42,17 @@ header{
 @keyframes fadeinheader {
   0%    { opacity: 0; }
   100%  { opacity: 1; }
+}
+
+@media screen and (max-width: 400px){
+  header{
+    h1{
+      font-size: 7.7vw;
+      padding: .5vw 2.5rem 0 0;
+    }
+  }
+  #logo{
+    width: 12.7vw;
+    margin: 3vw;
+  }
 }
